added limitation for version of maven

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <prerequisites>
+        <maven>3.0.4</maven>
+    </prerequisites>
 
     <developers>
         <developer>
